fix padding on mobile

--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -352,8 +352,8 @@
                     position: relative;
                     text-align: center;
                     .image{
-                        height: 110px;
-                        width: 110px;
+                        height: 100px;
+                        width: 100px;
                         text-align: center;
                         vertical-align: middle;
                         display: table-cell;
@@ -361,10 +361,10 @@
                         border: 1px solid #f2f2f2;
                         img{
                             margin: auto;
-                            max-width: 110px;
+                            max-width: 100px;
                             width: auto;
                             height: auto;
-                            max-height: 110px;
+                            max-height: 100px;
                         }
                     }
                     .icon_brillant{
